se realiza la configuracion de docker y se refactoriza algunas partes del codigo volviendolo mas reactivo.